# import-future-annotations

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
import_future_annotations/: __init__.py  __main__.py
tests/: import_future_annotations_test.py
