[metadata]
name = import_future_annotations
version = 0.1.0
description = Add import responsible for postponed evaluation of annotations to python files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbroton/import-future-annotations
author = Michal Broton
author_email = michal@broton.dev
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    classify-imports>=4.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    import-future-annotations = import_future_annotations:main